# fachprojekt-25-26

./: .gitignore  README.md  plot.py  run.sh
branch/: CMakeLists.txt  main.cpp  main.h
branch/buckets/: buckets.cpp  buckets.h
data-packing/: CMakeLists.txt  data-packing.cpp  metrics.cpp  metrics.h  students.h
initial/: CMakeLists.txt  main.cpp  main.h
initial/matrix/: matrix.cpp  matrix.h
memory-pattern/: CMakeLists.txt  main.cpp  main.h
memory-pattern/blur/: blur.cpp  blur.h
multi-threading/: CMakeLists.txt  multi-threading.cpp
perf-cpp/include/perfcpp/: counter.h
perf-cpp/src/: counter.cpp
soft-prefetching/: CMakeLists.txt  soft-prefetching.cpp
vectorization/: CMakeLists.txt  vectorization.cpp
